# ocv_msgs

./: CMakeLists.txt  CMakeLists.txt~  package.xml
msg/: ocv.msg  ocv.msg~
